--- a/index.html
+++ b/index.html
@@ -12,9 +12,28 @@
 <body>
     <div class="wrapper">
         <div class="title">Swiper slider</div>
-        <div class="swiper-container">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"></div>
+        <div class="image-slider swiper-container">
+            <div class="image-slider__wrapper swiper-wrapper">
+                <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__img">
+                        <img src="img/swiper.jpg" alt="Картинка">
+                    </div>
+                </div>
+                <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__img">
+                        <img src="img/swiper2.jpg" alt="Картинка">
+                    </div>
+                </div>
+                <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__img">
+                        <img src="img/swiper3.jpg" alt="Картинка">
+                    </div>
+                </div>
+                <div class="image-slider__slide swiper-slide">
+                    <div class="image-slider__img">
+                        <img src="img/swiper4.jpg" alt="Картинка">
+                    </div>
+                </div>
             </div>
 
             <div class="swiper-button-prev"></div>
