--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
@@ -14,25 +15,18 @@
         <div class="image-slider swiper-container">
             <div class="image-slider__wrapper swiper-wrapper">
                 <div class="image-slider__slide swiper-slide">
-                    <div class="image-slider__img">
-                        <img src="img/swiper.jpg" alt="Картинка">
-                    </div>
+                    <img class="image-slider__img" src="img/swiper.jpg" alt="Картинка">
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <div class="image-slider__img">
-                        <img src="img/swiper2.jpg" alt="Картинка">
-                    </div>
+                    <img class="image-slider__img" src="img/swiper2.jpg" alt="Картинка">
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <div class="image-slider__img">
-                        <img src="img/swiper3.jpg" alt="Картинка">
-                    </div>
+                    <img class="image-slider__img" src="img/swiper3.jpg" alt="Картинка">
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <div class="image-slider__img">
-                        <img src="img/swiper4.jpg" alt="Картинка">
-                    </div>
+                    <img class="image-slider__img" src="img/swiper4.jpg" alt="Картинка">
                 </div>
+
             </div>
 
             <div class="swiper-button-prev"></div>
