--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
                 <div class="image-slider__slide swiper-slide">
                     <img class="image-slider__img" src="img/swiper4.jpg" alt="Картинка">
                 </div>
-
+                <div class="image-slider__slide swiper-slide">
+                    <img class="image-slider__img" src="img/swiper6.jpg" alt="Картинка">
+                </div>
+                <div class="image-slider__slide swiper-slide">
+                    <img class="image-slider__img" src="img/swiper7.jpg" alt="Картинка">
+                </div>
+                <div class="image-slider__slide swiper-slide">
+                    <img class="image-slider__img" src="img/swiper8.jpg" alt="Картинка">
+                </div>
             </div>
 
             <div class="swiper-button-prev"></div>
