--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
 
 
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>>
+    <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="js/scrypt.js"></script>
 </body>
 
