--- a/index.html
+++ b/index.html
@@ -12,28 +12,36 @@
 <body>
     <div class="wrapper">
         <div class="title">Swiper slider</div>
+        <!-- dir="rtl" справа налево -->
         <div class="image-slider swiper-container">
             <div class="image-slider__wrapper swiper-wrapper">
                 <div class="image-slider__slide swiper-slide">
-                    <img class="image-slider__img" src="img/swiper.jpg" alt="Картинка">
+                    <img data-src="img/swiper.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img class="image-slider__img" src="img/swiper2.jpg" alt="Картинка">
+                    <img data-src="img/swiper2.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img class="image-slider__img" src="img/swiper3.jpg" alt="Картинка">
+                    <img data-src="img/swiper3.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img class="image-slider__img" src="img/swiper4.jpg" alt="Картинка">
+                    <img data-src="img/swiper4.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img class="image-slider__img" src="img/swiper6.jpg" alt="Картинка">
+                    <img data-src="img/swiper6.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img class="image-slider__img" src="img/swiper7.jpg" alt="Картинка">
+                    <img data-src="img/swiper7.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img class="image-slider__img" src="img/swiper8.jpg" alt="Картинка">
+                    <img data-src="img/swiper8.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <div class="swiper-lazy-preloader"></div>
                 </div>
             </div>
 
