--- a/index.html
+++ b/index.html
@@ -16,31 +16,39 @@
         <div class="image-slider swiper-container">
             <div class="image-slider__wrapper swiper-wrapper">
                 <div class="image-slider__slide swiper-slide">
-                    <img data-src="img/swiper.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <!-- Рекомендуется добавлять 1 на 1 пиксель картинку -->
+                    <img data-src="img/swiper.jpg" class="image-slider__img swiper-lazy" src="img/plug.bmp"
+                        alt="Картинка">
                     <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img data-src="img/swiper2.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <img data-src="img/swiper2.jpg" class="image-slider__img swiper-lazy" src="img/plug.bmp"
+                        alt="Картинка">
                     <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img data-src="img/swiper3.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <img data-src="img/swiper3.jpg" class="image-slider__img swiper-lazy" src="img/plug.bmp"
+                        alt="Картинка">
                     <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img data-src="img/swiper4.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <img data-src="img/swiper4.jpg" class="image-slider__img swiper-lazy" src="img/plug.bmp"
+                        alt="Картинка">
                     <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img data-src="img/swiper6.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <img data-src="img/swiper6.jpg" class="image-slider__img swiper-lazy" src="img/plug.bmp"
+                        alt="Картинка">
                     <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img data-src="img/swiper7.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <img data-src="img/swiper7.jpg" class="image-slider__img swiper-lazy" src="img/plug.bmp"
+                        alt="Картинка">
                     <div class="swiper-lazy-preloader"></div>
                 </div>
                 <div class="image-slider__slide swiper-slide">
-                    <img data-src="img/swiper8.jpg" class="image-slider__img swiper-lazy" src="" alt="Картинка">
+                    <img data-src="img/swiper8.jpg" class="image-slider__img swiper-lazy" src="img/plug.bmp"
+                        alt="Картинка">
                     <div class="swiper-lazy-preloader"></div>
                 </div>
             </div>
